# NoodlesExplorer

./: .clang-format  .gitignore  README.md
build-src-Desktop_Qt_5_15_2_clang_64bit-Debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
build-src-Desktop_Qt_5_15_2_clang_64bit-Debug/.cmake/api/v1/reply/: cache-v2-23972a2671677376be9e.json  cmakeFiles-v1-16f9b5d510425f82463d.json  codemodel-v2-a67e9b77679201053fcd.json  index-2021-05-01T17-11-03-0679.json  (+6 more)
build-src-Desktop_Qt_5_15_2_clang_64bit-Debug/CPM_modules/: FindGroupSourcesByFolder.cmake.cmake  FindPackageProject.cmake.cmake  Findflatbuffers.cmake  Findglm.cmake  Findnoodles.cmake
build-src-Desktop_Qt_5_15_2_clang_64bit-Debug/NoodlesExplorer_autogen/: moc_predefs.h  mocs_compilation.cpp
build-src-Desktop_Qt_5_15_2_clang_64bit-Debug/NoodlesExplorer_autogen/AXDQNF62LW/: moc_qinstancedmetalroughmaterial.cpp
build-src-Desktop_Qt_5_15_2_clang_64bit-Debug/NoodlesExplorer_autogen/EWIEGA46WW/: moc_argumenttablemodel.cpp  moc_attachedmethodlistmodel.cpp  moc_componentlistmodel.cpp  moc_delegates.cpp  moc_state.cpp  qrc_qml.cpp
src/: CMakeLists.txt  ColorPicker.qml  DrawerContent.qml  HeaderTable.qml  InspectorPopup.qml  MethodCallUI.qml  ObjectBox.qml  RenderableEntity.qml  SceneViewComponent.qml  SettingsPopup.qml  SideDrawer.qml  adddatadialog.cpp  adddatadialog.h  adddatadialog.ui  argumenttablemodel.cpp  argumenttablemodel.h  attachedmethodlistmodel.cpp  attachedmethodlistmodel.h  chartplotview.cpp  chartplotview.h  chartviewer.cpp  chartviewer.h  chartviewer.ui  componentlistmodel.cpp  componentlistmodel.h  delegates.cpp  delegates.h  jsoneditdialog.cpp  jsoneditdialog.h  jsoneditdialog.ui  main.cpp  main.qml  methodcalldialog.cpp  methodcalldialog.h  methodcalldialog.ui  newselectiondialog.cpp  newselectiondialog.h  newselectiondialog.ui  qml.qrc  qtquickcontrols2.conf  (+10 more)
src/delegates/: delegates.cpp  delegates.h  exbuffer.cpp  exbuffer.h  exdoc.cpp  exdoc.h  exlight.cpp  exlight.h  exmaterial.cpp  exmaterial.h  exmesh.cpp  exmesh.h  exmethod.cpp  exmethod.h  exobject.cpp  exobject.h  exsignal.cpp  exsignal.h  extable.cpp  extable.h  extexture.cpp  extexture.h
src/instance_material/: instancetable.cpp  instancetable.h  qinstancedmetalroughmaterial.cpp  qinstancedmetalroughmaterial.h
src/instance_material/shaders/es3/: default.vert
src/instance_material/shaders/gl3/: default.vert  metalrough.frag
src/instance_material/shaders/graphs/: metalrough.frag.json
src/instance_material/shaders/rhi/: default.vert
src/qml/: ColorPicker.qml  ConnectionPopup.qml  Console.qml  CustomRect.qml  DrawerContent.qml  FirstPersonController.qml  HeaderTable.qml  InspectorPopup.qml  MethodCallUI.qml  NSButton.qml  NSGroupBox.qml  NSPopOver.qml  NSPopup.qml  NSRoundedButton.qml  NSTextField.qml  ObjectBox.qml  ObjectInfoBox.qml  RenderableEntity.qml  RenderableMaterial.qml  RenderableTexture.qml  SceneViewComponent.qml  SettingsPopup.qml  SideDrawer.qml  Style.qml  TitleBar.qml  WindowControls.qml  jsconsole.js  main.qml
